idf_component_register(
    SRCS
        "OpenHab.cpp"
        "OpenHab.h"
        "IconLoader.cpp"
        "IconLoader.h"
        "HttpRequests.cpp"
        "HttpRequests.h"
        "OpenHabObject.cpp"
        "OpenHabObject.h"
        "OpenHabFactory.cpp"
        "OpenHabFactory.h"
        "png/PNGdec.cpp"
        "png/PNGdec.h"
        "png/adler32.c"
        "png/crc32.c"
        "png/crc32.h"
        "png/infback.c"
        "png/inffast.c"
        "png/inffast.h"
        "png/inffixed.h"
        "png/inflate.c"
        "png/inflate.h"
        "png/inftrees.c"
        "png/inftrees.h"
        "png/png.inl"
        "png/s3_simd_rgb565.S"
        "png/zconf.h"
        "png/zlib.h"
        "png/zutil.c"
        "png/zutil.h"
    INCLUDE_DIRS
        "."
        "include"
        "png"
    REQUIRES
        "esp_http_client"
    )

